--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,12 @@
                 android:text="Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/button4"/>
+
+        <Button
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
